--- a/Food Delivery/Food Delivery/Sticky Header/Views/TabBarCollectionViewCell.xib
+++ b/Food Delivery/Food Delivery/Sticky Header/Views/TabBarCollectionViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabBarCollectionViewCell" id="5Xa-jw-TvG" customClass="TabBarCollectionViewCell" customModule="Food_Delivery">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabBarCollectionViewCell" id="5Xa-jw-TvG" userLabel="TabBarCollectionViewCell" customClass="TabBarCollectionViewCell" customModule="Food_Delivery" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
