--- a/Food Delivery/Food Delivery/Base.lproj/Main.storyboard
+++ b/Food Delivery/Food Delivery/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -508,12 +507,12 @@
                     </navigationItem>
                     <connections>
                         <outlet property="MicrophoneButton" destination="7kB-uV-Gs3" id="mj7-aU-s5y"/>
-                        <outlet property="tableView" destination="UNz-dP-Lcb" id="W7k-bT-aya"/>
+                        <outlet property="tableView" destination="UNz-dP-Lcb" id="Har-WH-X4G"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kqH-IV-7d6" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4734" y="10"/>
+            <point key="canvasLocation" x="4196" y="-530"/>
         </scene>
         <!--Sticky Header Food View Controller-->
         <scene sceneID="deb-2V-3DG">
@@ -524,65 +523,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hxa-VO-7T9">
-                                <rect key="frame" x="0.0" y="103" width="430" height="300"/>
+                                <rect key="frame" x="0.0" y="103" width="430" height="200"/>
                                 <subviews>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hk2-Ep-gHf">
-                                        <rect key="frame" x="20" y="25" width="390" height="250"/>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6bG-Er-Syj">
+                                        <rect key="frame" x="0.0" y="0.0" width="430" height="200"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="250" id="13u-Mi-HrG"/>
-                                        </constraints>
-                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LIi-UK-UUz">
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="UWy-qi-ELZ">
                                             <size key="itemSize" width="128" height="128"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
-                                        <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BannerCell" id="urk-36-C1k" customClass="BannerCell" customModule="Food_Delivery" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="5qg-5h-z5i">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hamburger" translatesAutoresizingMaskIntoConstraints="NO" id="i4z-fc-etf">
-                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="500" id="lil-xw-gHe"/>
-                                                                <constraint firstAttribute="height" constant="500" id="nTg-PM-ky8"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="i4z-fc-etf" secondAttribute="trailing" id="1dd-TK-dHz"/>
-                                                        <constraint firstAttribute="bottom" secondItem="i4z-fc-etf" secondAttribute="bottom" id="4mM-Zw-977"/>
-                                                        <constraint firstItem="i4z-fc-etf" firstAttribute="top" secondItem="5qg-5h-z5i" secondAttribute="top" id="IS2-9B-bGi"/>
-                                                        <constraint firstItem="i4z-fc-etf" firstAttribute="top" secondItem="5qg-5h-z5i" secondAttribute="top" id="YKC-xg-H1S"/>
-                                                        <constraint firstAttribute="bottom" secondItem="i4z-fc-etf" secondAttribute="bottom" id="ZTf-Hg-hee"/>
-                                                        <constraint firstItem="i4z-fc-etf" firstAttribute="leading" secondItem="5qg-5h-z5i" secondAttribute="leading" id="c5v-Cb-Ldd"/>
-                                                        <constraint firstItem="i4z-fc-etf" firstAttribute="leading" secondItem="5qg-5h-z5i" secondAttribute="leading" id="j7L-0L-4sB"/>
-                                                        <constraint firstAttribute="trailing" secondItem="i4z-fc-etf" secondAttribute="trailing" id="xhH-LH-9MO"/>
-                                                    </constraints>
-                                                </collectionViewCellContentView>
-                                                <size key="customSize" width="414" height="250"/>
-                                                <connections>
-                                                    <outlet property="BannerImage" destination="i4z-fc-etf" id="uVO-cL-25g"/>
-                                                </connections>
-                                            </collectionViewCell>
-                                        </cells>
+                                        <cells/>
                                     </collectionView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="hk2-Ep-gHf" firstAttribute="centerY" secondItem="hxa-VO-7T9" secondAttribute="centerY" id="7u3-YI-a17"/>
-                                    <constraint firstAttribute="height" constant="300" id="LKd-LC-nof"/>
-                                    <constraint firstItem="hk2-Ep-gHf" firstAttribute="leading" secondItem="hxa-VO-7T9" secondAttribute="leading" constant="20" id="Sxm-qq-Kkj"/>
-                                    <constraint firstItem="hk2-Ep-gHf" firstAttribute="centerX" secondItem="hxa-VO-7T9" secondAttribute="centerX" id="uFP-ra-qUy"/>
+                                    <constraint firstItem="6bG-Er-Syj" firstAttribute="top" secondItem="hxa-VO-7T9" secondAttribute="top" id="Aj3-fI-zp2"/>
+                                    <constraint firstAttribute="trailing" secondItem="6bG-Er-Syj" secondAttribute="trailing" id="EdM-Pm-bbN"/>
+                                    <constraint firstAttribute="bottom" secondItem="6bG-Er-Syj" secondAttribute="bottom" id="J4A-dY-Ujh"/>
+                                    <constraint firstAttribute="height" constant="200" id="LKd-LC-nof"/>
+                                    <constraint firstItem="6bG-Er-Syj" firstAttribute="leading" secondItem="hxa-VO-7T9" secondAttribute="leading" id="vcv-5S-5iA"/>
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Tch-al-nzY">
-                                <rect key="frame" x="0.0" y="403" width="430" height="60"/>
+                                <rect key="frame" x="0.0" y="303" width="430" height="60"/>
                                 <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="xq0-uk-6OC"/>
@@ -596,7 +561,33 @@
                                 <cells/>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r6s-TI-DQs">
-                                <rect key="frame" x="0.0" y="463" width="430" height="386"/>
+                                <rect key="frame" x="0.0" y="363" width="430" height="486"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tLd-o3-VA9">
+                                        <rect key="frame" x="0.0" y="0.0" width="430" height="486"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="mdE-WK-YGn">
+                                                <rect key="frame" x="0.0" y="50" width="430" height="43.666667938232422"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mdE-WK-YGn" id="Gdn-2H-gMW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="430" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="tLd-o3-VA9" secondAttribute="trailing" id="4Ny-2x-y8W"/>
+                                    <constraint firstItem="tLd-o3-VA9" firstAttribute="leading" secondItem="r6s-TI-DQs" secondAttribute="leading" id="4lC-2q-7hP"/>
+                                    <constraint firstItem="tLd-o3-VA9" firstAttribute="top" secondItem="r6s-TI-DQs" secondAttribute="top" id="FOb-Vq-Zvt"/>
+                                    <constraint firstAttribute="trailing" secondItem="tLd-o3-VA9" secondAttribute="trailing" id="ZGE-UC-XdV"/>
+                                    <constraint firstAttribute="bottom" secondItem="tLd-o3-VA9" secondAttribute="bottom" id="jLk-aA-6V9"/>
+                                    <constraint firstAttribute="bottom" secondItem="tLd-o3-VA9" secondAttribute="bottom" id="kLs-fX-JBQ"/>
+                                    <constraint firstItem="tLd-o3-VA9" firstAttribute="leading" secondItem="r6s-TI-DQs" secondAttribute="leading" id="lQo-jR-E1K"/>
+                                    <constraint firstItem="tLd-o3-VA9" firstAttribute="top" secondItem="r6s-TI-DQs" secondAttribute="top" id="q93-Jh-bAE"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="oyn-Pu-E9Y"/>
@@ -604,23 +595,43 @@
                         <constraints>
                             <constraint firstItem="Tch-al-nzY" firstAttribute="top" secondItem="hxa-VO-7T9" secondAttribute="bottom" id="0HY-1z-7Dt"/>
                             <constraint firstItem="oyn-Pu-E9Y" firstAttribute="trailing" secondItem="r6s-TI-DQs" secondAttribute="trailing" id="47l-Ij-dXm"/>
+                            <constraint firstItem="r6s-TI-DQs" firstAttribute="top" secondItem="Tch-al-nzY" secondAttribute="bottom" id="8no-EK-bFV"/>
+                            <constraint firstItem="r6s-TI-DQs" firstAttribute="leading" secondItem="oyn-Pu-E9Y" secondAttribute="leading" id="Cqr-kc-uKS"/>
                             <constraint firstItem="oyn-Pu-E9Y" firstAttribute="bottom" secondItem="r6s-TI-DQs" secondAttribute="bottom" id="Stl-vF-GbJ"/>
                             <constraint firstItem="oyn-Pu-E9Y" firstAttribute="trailing" secondItem="hxa-VO-7T9" secondAttribute="trailing" id="XjO-bK-L4M"/>
                             <constraint firstItem="hxa-VO-7T9" firstAttribute="leading" secondItem="oyn-Pu-E9Y" secondAttribute="leading" id="bKb-J3-YQ1"/>
                             <constraint firstItem="oyn-Pu-E9Y" firstAttribute="trailing" secondItem="Tch-al-nzY" secondAttribute="trailing" id="bgF-kV-Y0l"/>
+                            <constraint firstItem="r6s-TI-DQs" firstAttribute="bottom" secondItem="oyn-Pu-E9Y" secondAttribute="bottom" id="dZE-76-dRJ"/>
                             <constraint firstItem="hxa-VO-7T9" firstAttribute="top" secondItem="oyn-Pu-E9Y" secondAttribute="top" id="eMs-ga-hZ1"/>
                             <constraint firstItem="Tch-al-nzY" firstAttribute="leading" secondItem="oyn-Pu-E9Y" secondAttribute="leading" id="mD9-9F-mvT"/>
+                            <constraint firstItem="r6s-TI-DQs" firstAttribute="trailing" secondItem="oyn-Pu-E9Y" secondAttribute="trailing" id="qer-iN-Srt"/>
                             <constraint firstItem="r6s-TI-DQs" firstAttribute="top" secondItem="Tch-al-nzY" secondAttribute="bottom" id="ufa-Dt-HWf"/>
                             <constraint firstItem="r6s-TI-DQs" firstAttribute="leading" secondItem="oyn-Pu-E9Y" secondAttribute="leading" id="zR6-7e-Nys"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="CGH-Uc-wfO"/>
+                    <navigationItem key="navigationItem" id="CGH-Uc-wfO">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="jk4-Dn-sTt">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="ALW-gI-UxO">
+                                <rect key="frame" x="364" y="4.6666666666666679" width="46" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="mic" catalog="system">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="SpeechRecognition" destination="4mM-96-Z8P" eventType="touchUpInside" id="w6i-x2-6R7"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="BannerCollectionView" destination="hk2-Ep-gHf" id="mg0-g7-4Xd"/>
+                        <outlet property="BannerCollectionView" destination="6bG-Er-Syj" id="X98-W5-zoy"/>
+                        <outlet property="MicrophoneButton" destination="ALW-gI-UxO" id="DL4-Fb-9ea"/>
                         <outlet property="bottomView" destination="r6s-TI-DQs" id="e6b-II-7F6"/>
                         <outlet property="headerViewHeightConstraint" destination="LKd-LC-nof" id="a6y-8G-kwk"/>
                         <outlet property="stickyHeaderView" destination="hxa-VO-7T9" id="0jt-GZ-3Q4"/>
                         <outlet property="tabBarCollectionView" destination="Tch-al-nzY" id="IlA-3A-ZL9"/>
+                        <outlet property="tableView" destination="tLd-o3-VA9" id="9ad-Jb-gcN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2K4-kL-LbP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -782,7 +793,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="4mM-96-Z8P" kind="relationship" relationship="rootViewController" id="ikx-gf-TIG"/>
+                        <segue destination="4mM-96-Z8P" kind="relationship" relationship="rootViewController" id="x7L-wR-Hpg"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EEy-h5-eCK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
