--- a/Food Delivery/Food Delivery/Sticky Header/Cells/FoodTableViewCell.xib
+++ b/Food Delivery/Food Delivery/Sticky Header/Cells/FoodTableViewCell.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FoodTableViewCell" rowHeight="172" id="yd5-bb-aL0" customClass="FoodTableViewCell" customModule="Food_Delivery" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="512" height="172"/>
