--- a/Food Delivery/Food Delivery/Sticky Header/Cells/TabBarCollectionViewCell.xib
+++ b/Food Delivery/Food Delivery/Sticky Header/Cells/TabBarCollectionViewCell.xib
@@ -9,14 +9,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabBarCollectionViewCell" id="5Xa-jw-TvG" customClass="TabBarCollectionViewCell" customModule="Food_Delivery">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabBarCollectionViewCell" id="vRG-vo-plk" userLabel="File's Owner" customClass="TabBarCollectionViewCell" customModule="Food_Delivery" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="60"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TAB 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XCi-qV-NPg">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TAB 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNH-sA-fNP">
                         <rect key="frame" x="20" y="20" width="60" height="20"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                         <nil key="textColor"/>
@@ -24,16 +24,16 @@
                     </label>
                 </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="aJd-G4-H5p"/>
+            <viewLayoutGuide key="safeArea" id="qLf-TB-NzW"/>
             <constraints>
-                <constraint firstItem="XCi-qV-NPg" firstAttribute="leading" secondItem="5Xa-jw-TvG" secondAttribute="leading" constant="20" id="6pX-qM-O8H"/>
-                <constraint firstAttribute="trailing" secondItem="XCi-qV-NPg" secondAttribute="trailing" constant="20" id="lIM-xJ-RtC"/>
-                <constraint firstItem="XCi-qV-NPg" firstAttribute="top" secondItem="5Xa-jw-TvG" secondAttribute="top" constant="20" id="rQY-2k-Jrx"/>
-                <constraint firstAttribute="bottom" secondItem="XCi-qV-NPg" secondAttribute="bottom" constant="20" id="yux-7j-s15"/>
+                <constraint firstAttribute="trailing" secondItem="KNH-sA-fNP" secondAttribute="trailing" constant="20" id="Lkr-Ol-Km9"/>
+                <constraint firstAttribute="bottom" secondItem="KNH-sA-fNP" secondAttribute="bottom" constant="20" id="N78-zY-xfS"/>
+                <constraint firstItem="KNH-sA-fNP" firstAttribute="top" secondItem="vRG-vo-plk" secondAttribute="top" constant="20" id="gpT-hd-e7g"/>
+                <constraint firstItem="KNH-sA-fNP" firstAttribute="leading" secondItem="vRG-vo-plk" secondAttribute="leading" constant="20" id="kzI-u4-AKU"/>
             </constraints>
             <size key="customSize" width="399" height="214"/>
             <connections>
-                <outlet property="tabNameLabel" destination="XCi-qV-NPg" id="FWK-iK-2xM"/>
+                <outlet property="tabNameLabel" destination="KNH-sA-fNP" id="KMb-6m-2cQ"/>
             </connections>
             <point key="canvasLocation" x="15.384615384615383" y="133.64928909952607"/>
         </collectionViewCell>
